--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -102,7 +102,7 @@
         </div>
         <div class="modal-body">
           <div class="input-block">
-          .xlsx файл, в котором есть колонка "Компании" c названиями компаний
+          .xlsx файл, в котором есть колонка "Компания" c названиями компаний
           <input name="change_responsible_file" type="file" accept=".xlsx">
           <div class="input-block">
             ID нового ответсвенного
