--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -129,11 +129,12 @@
           </div>
           <div class="modal-body">
             <div class="input-block">
-            .xlsx файл, в котором есть колонка "Компания" c названиями компаний
-            <input name="change_responsible_file" type="file" accept=".xlsx">
-            <div class="input-block">
-              ID нового ответсвенного
-              <input name="new_responsible" type="text">
+            registrants.xlsx
+            <input name="registrants_file" type="file" accept=".xlsx">
+            questionnaire.xlsx
+            <input name="questionnaire_file" type="file" accept=".xlsx">
+            ID элемента мероприятия
+            <input name="event_id" type="text">
           </div>
           </div>
           <div class="modal-footer">
