--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -48,6 +48,9 @@
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#SeminarDataHandlerModal">
       Обработка данных семинара
     </button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateVacationModal">
+      Загрузить отпуска сотрудников
+    </button>
     </div>
     </div>
     <!-- Модальное окно "Сверка по отчетности"-->
@@ -118,6 +121,27 @@
       </div>
     </div>
   </div>
+    <!-- Модальное окно "Смена ответственного"-->
+    <div class="modal fade" id="CreateVacationModal" tabindex="-1" aria-labelledby="CreateVacationLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="CreateVacationLabel">Загрузить отпуска сотрудников</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+          </div>
+          <div class="modal-body">
+            <div class="input-block">
+            Файл
+            <input name="change_responsible_file" type="vacation_file" accept=".xlsx">
+          </div>
+          </div>
+          <div class="modal-footer">
+            <input type="submit" value="Сменить" name="submit_button">
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Модальное окно "Обработка данных семинара"-->
     <div class="modal fade" id="SeminarDataHandlerModal" tabindex="-1" aria-labelledby="SeminarDataHandlerLabel" aria-hidden="true">
       <div class="modal-dialog">
