--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -49,7 +49,7 @@
       Обработка данных семинара
     </button>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateVacationModal">
-      Загрузить отпуска сотрудников
+      Отпуска сотрудников
     </button>
     </div>
     </div>
@@ -132,7 +132,7 @@
           <div class="modal-body">
             <div class="input-block">
             Файл
-            <input name="change_responsible_file" type="vacation_file" accept=".xlsx">
+            <input name="vacation_file" type="file" accept=".xlsx">
           </div>
           </div>
           <div class="modal-footer">
