--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -121,7 +121,7 @@
       </div>
     </div>
   </div>
-    <!-- Модальное окно "Смена ответственного"-->
+    <!-- Модальное окно "Создание отпуска"-->
     <div class="modal fade" id="CreateVacationModal" tabindex="-1" aria-labelledby="CreateVacationLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
