--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -136,6 +136,26 @@
             <div class="input-block">
             .xlsx файл ЭДО
             <input name="edo_info_handler_file" type="file" accept=".xlsx">
+            <select class="form-select" aria-label="Месяц" name="month">
+              <option selected>Выберите месяц</option>
+              <option value="Январь">Январь</option>
+              <option value="Февраль">Февраль</option>
+              <option value="Март">Март</option>
+              <option value="Апрель">Апрель</option>
+              <option value="Май">Май</option>
+              <option value="Июнь">Июнь</option>
+              <option value="Июль">Июль</option>
+              <option value="Август">Август</option>
+              <option value="Сентябрь">Сентябрь</option>
+              <option value="Октябрь">Октябрь</option>
+              <option value="Ноябрь">Ноябрь</option>
+              <option value="Декабрь">Декабрь</option>
+            </select>
+            <select class="form-select" aria-label="Год" name="year">
+              <option selected>Выберите год</option>
+              <option value="2022">2022</option>
+              <option value="2023">2023</option>
+            </select>
           </div>
           </div>
           <div class="modal-footer">
