--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -283,7 +283,7 @@
         <div class="input-block">
         Новая статистика:
         <input name="new_call_statistic_file" type="file" accept=".xlsx">
-        <select class="form-select" aria-label="Месяц" name="month">
+        <select class="form-select" aria-label="Месяц" name="rewrite_calls_month">
           <option selected>Выберите месяц</option>
           <option value="Январь">Январь</option>
           <option value="Февраль">Февраль</option>
@@ -298,7 +298,7 @@
           <option value="Ноябрь">Ноябрь</option>
           <option value="Декабрь">Декабрь</option>
         </select>
-        <select class="form-select" aria-label="Год" name="year">
+        <select class="form-select" aria-label="Год" name="rewrite_calls_year">
           <option selected>Выберите год</option>
           <option value="2022">2022</option>
           <option value="2023">2023</option>
