--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -12,7 +12,7 @@
   <body>    
   <div class="container">
       <div class="buttons">
-        <a href="/static/logs/connect_logs.txt" download="connect">
+        <a href="/root/web_app_4dk/1C_Connect.db" download="connect">
           Логи 1С-Коннект
         </a>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseAccountingDealsModal">
