--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </head>
-  <body>    
+  <body>
+  {% if user_group == "main" %}
   <div class="container">
       <div class="buttons">
         <a href="/static/logs/connect_logs.txt" download="connect">
@@ -56,6 +57,7 @@
     </button>
     </div>
     </div>
+  {% endif %}
     <!-- Модальное окно "Сверка по отчетности"-->
 <form method="POST" enctype="multipart/form-data"> 
 <div class="modal fade" id="ReviseAccountingDealsModal" tabindex="-1" aria-labelledby="ReviseAccountingDealsModalLabel" aria-hidden="true">
