--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -23,13 +23,16 @@
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseNewSubModal">
           Сверка по NewSub
         </button>
+        {% if user_group == "main" %}
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ChangeResponsibleModal">
           Смена ответственного
         </button>
+        {% endif %}
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EdoInfoHandlerModal">
           Загрузка файла ЭДО
         </button>
       </div>
+      {% if user_group == "main" %}
       <div class="logs_block" align="center">
       <h2>Логи веб-приложения</h2>
       <div class="log_window">
@@ -58,6 +61,7 @@
     </button>
     </div>
     </div>
+    {% endif %}
     <!-- Модальное окно "Сверка по отчетности"-->
 <form method="POST" enctype="multipart/form-data"> 
 <div class="modal fade" id="ReviseAccountingDealsModal" tabindex="-1" aria-labelledby="ReviseAccountingDealsModalLabel" aria-hidden="true">
